welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: value xor is not a member of Boolean
 if((a>=13&& a<=19) xor (b>=13 && b<=19)) {
                    ^